FIX://Scrumwall overflow issue on Android devices.

--- a/www/Styles/less/iscroll.less
+++ b/www/Styles/less/iscroll.less
@@ -47,6 +47,7 @@
 	            	            
 	            .scroll-list {
 	                .position(absolute, 50px, auto, 50px); .size(@metro-column - 10);
+	                border-top: 1px solid transparent; /*overflow: hidden !important;*/
 	                
 	                .scroller-list { .reset-p; }
 	            }
